更新打包脚本