@@ -65,7 +65,9 @@ if [ -d "$target/$appFile" ]; then
 fi
 
 # 执行打包
-(cd "$target" && jpackage --name "$appName" --type app-image -m "$appMainClass" --runtime-image "$runtimeImage" --icon "$appIcon" --app-version "$appVersion" --java-options "-XX:+UseZGC")
+(cd "$target" && jpackage --name "$appName" --type app-image -m "$appMainClass" --runtime-image "$runtimeImage" \
+--icon "$appIcon" --app-version "$appVersion" --java-options "-XX:+UseZGC" \
+--java-options "--enable-native-access=javafx.graphics,com.github.kwhat.jnativehook,com.sun.jna,org.bytedeco.javacpp,org.bytedeco.opencv")
 echo "已完成 jpackage 打包"
 
 # 移动动态库文件
